--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
         <script>
             const ROOM_ID = "<%= roomId %>";
             const STREAMING = "<%= streaming %>";
+            const PORT = "<%= port %>";
         </script>
         <script
             defer
@@ -16,15 +17,31 @@
         <script src="app.js" defer></script>
         <title>Document</title>
         <style>
-            #video-grid {
-                display: grid;
-                grid-template-columns: repeat(auto-fill, 300px);
-                grid-auto-rows: 300px;
+            *,
+            *::before,
+            *::after {
+                box-sizing: border-box;
             }
-
+            * {
+                margin: 0;
+                padding: 0;
+            }
+            html,
+            body {
+                height: 100%;
+            }
+            img,
+            picture,
+            video,
+            canvas,
+            svg {
+                display: block;
+                max-width: 100%;
+            }
             video {
                 width: 100%;
                 height: 100%;
+                max-height: 100vh;
                 object-fit: cover;
             }
         </style>
